--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Group2"
         tools:targetApi="31">
         <activity
+            android:name=".StickerHistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".Afterlogin"
             android:exported="false" />
         <activity
@@ -23,7 +26,6 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
