--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Group2"
         tools:targetApi="31">
         <activity
+            android:name=".StickerStatisticsActivity"
+            android:exported="false" />
+        <activity
             android:name=".StickerHistoryActivity"
             android:exported="false" />
         <activity
@@ -27,6 +30,12 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StickerSentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StickerReceivedActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
